 FIXED  : Ticket #1178, Fix OSD messages when toggling "Screen Space Pixel Shader" on/off
 FIXED  : Ticket #1212, Playing "Recent File" clears playlist, even though playlist contains file
 FIXED  : Ticket #1220, MPC fails to play specific MKV files
 FIXED  : Ticket #1321, IMpegSplitterFilter uses CString - should be WCHAR or BSTR instead


v1.5.1.2903 - 29 February 2011
==============================
 FIXED  : Crash on Sandy Bridge processor


v1.5.0.2827 - 31 January 2011
==============================
 NEW    : Added new options to always default to external subtitles, ignore
          embedded subtitles and to set the autoload subtitle paths
 NEW    : Added support for "in24", "fl64", 8-bit "sowt", "IMA4" and "NONE"
          audio (old QuickTime PCM)
 NEW    : Added support for "in24", "in32", "fl32", "fl64"
          (both big-endian and little-endian) in .mov files
 NEW    : Ticket #784, Enable ctrl+A in the MediaInfo window
 NEW    : [DVB] LCN support, added EPG current event information, offset parameter for
          scanning channels, added channel encryption detection for DVB-t during scan
 NEW    : Added ignore encrypted channels checkbox during DVB scan
 NEW    : Armenian translation
 CHANGED: Updated FFmpeg
 CHANGED: Updated MediaInfoLib to v0.7.39
 CHANGED: Updated ZenLib to v0.4.17
 CHANGED: Updated Little CMS to v2.1
 CHANGED: Updated libpng to v1.4.5
 CHANGED: Updated libogg to v1.2.2
 CHANGED: Updated libvorbis to v1.3.2
 CHANGED: Cleaned up and optimized code for QT PCM, small corrections in MP4Splitter
 CHANGED: DVB: the current channel audio stream is memorized and selected by default
          each time the channel is switched back
 CHANGED: Removed DSM Converter (use the legacy branch if you need this feature)
 CHANGED: Removed RoQ splitter/decoder (same as above)
 FIXED  : Ticket #52,  [playlist] shuffle is broken
 FIXED  : Ticket #78,  ESC key cannot be assigned to other actions